# django-boiler-plate

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
myapp/: settings.py  urls.py
myapp/configurations/: base_model.py  exception_handler.py  logging.py  renderers.py  yasg_wrapper.py
myapp/enums/: application_role_names.py  role_names.py
myapp/permissions/: core_roles.py
myapp/utils/: constants.py  env_constants.py  responses.py  schemas.py
users/: models.py  tests.py  urls.py  views.py
users/management/commands/: create_users.py  setup_roles.py
users/migrations/: 0001_initial.py
